<resources>
    <string name="app_name">Game Shelf</string>
    <string name="action_settings">Settings</string>

    <!-- main screen -->
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="import_from_bgg">Import from BGG</string>
    <string name="about">About</string>
    <string name="bgg_login">Log in to Board Game Geek</string>
    <string name="bgg_log_out">Log out of Board Game Geek</string>
    <string name="bgg_logged_out">Logged out of Board Game Geek</string>
    <string name="no_results_found">Looks like your collection is empty.\nPress the add button below (&#2228;)\nor import from Board Game Geek</string>
    <string name="back">Back</string>

    <!-- search -->
    <string name="search_hint">Search your collection</string>

    <!-- sort -->
    <string name="sort_title">Sort by</string>
    <string name="dialog_sort">Sort</string>
    <string-array name="sort_options">
        <item>Boardgame Title</item>
        <item>Date Added</item>
    </string-array>

    <!-- add new boardgame -->
    <string name="add_new_boardgame_title">Add a boardgame to your collection</string>
    <string name="add_new_boardgame_game_title">Title</string>
    <string name="add_new_boardgame_collect">Collect</string>
    <string name="no_search_results">No results for\n“%1$s”</string>

    <!-- deletion confirmation -->
    <string name="remove_game_title">Remove boardgame from collection?</string>
    <string name="remove_game_message">Remove this boardgame and all its data from your collection?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_remove">Remove</string>

    <!-- BGG login -->
    <string name="username">Username</string>
    <string name="bgg_login_action">Log in</string>

    <!-- details screen -->
    <string name="details_box_art">Boardgame box art</string>
    <string name="details_num_of_players">Number of players</string>
    <string name="details_play_time">Play time</string>
    <string name="details_best_with">Best played with</string>
    <string name="details_minium_age">Suggested ages</string>
    <string name="details_title">Boardgame title</string>
    <string name="details_publisher_date">Publisher and date</string>
    <string name="details_description">Boardgame description</string>
    <string name="details_date">Published on</string>

    <!-- about screen -->
    <string name="about_gameshelf_0">Game Shelf helps you keep track of your growing boardgame collection all in one place. It pulls data from [Board Game Geek](https://www.boardgamegeek.com/); it is in no way an official client for this services nor endorsed by them.</string>
    <string name="about_gameshelf_1">Game Shelf is written by Andy&#160;Rose</string>
    <string name="about_gameshelf_2">[Google+](https://plus.google.com/115735526839194099194)</string>
    <string name="about_gameshelf_3">The source code is available on [GitHub](https://github.com/Phyxsius/Capstone-Project)</string>
    <string name="about_libs_intro">Game Shelf is built with the help of these awesome&#160;libraries</string>
    <string name="about_lib_link">website</string>

    <!-- widget -->
    <string name="appwidget_text">Game Shelf</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_text">Your Game Shelf collection is empty</string>

    <!-- transition shared elements -->
    <string name="transition_game" translatable="false">game</string>
    <string name="transition_game_background" translatable="false">game_background</string>
    <string name="transition_add_new_boardgame" translatable="false">add_new_boardgame</string>
    <string name="transition_bgg_login" translatable="false">transition_bgg_login</string>

    <!-- content authorities -->
    <string name="share_authority" translatable="false">us.phyxsi.gameshelf.shareprovider</string>
</resources>
