<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2015 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<us.phyxsi.gameshelf.ui.widget.BottomSheet
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:scrollingChild="@+id/scroll_container"
    app:dragDismissDistance="@dimen/drag_dismiss_distance"
    tools:context="us.phyxsi.gameshelf.ui.AddNewBoardgame">

    <LinearLayout
        android:id="@+id/bottom_sheet_content"
        android:layout_width="@dimen/bottom_sheet_width"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/background_light"
        android:elevation="@dimen/z_fab"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:transitionName="@string/transition_add_new_boardgame">

        <us.phyxsi.gameshelf.ui.widget.BaselineGridTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/spacing_micro"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/spacing_micro"
            android:gravity="start|center_vertical"
            android:minHeight="?android:actionBarSize"
            android:text="@string/add_new_boardgame_title"
            android:background="@color/background_light"
            style="@style/Widget.GameShelf.DialogTitle" />

        <us.phyxsi.gameshelf.ui.widget.ObservableScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_new_boardgame_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_normal_til"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/padding_normal"
                    app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

                    <EditText
                        android:id="@+id/add_new_boardgame_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_new_boardgame_game_title"
                        android:inputType="textCapWords" />

                </android.support.design.widget.TextInputLayout>



                <FrameLayout
                    android:id="@+id/results_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_light">

                    <ProgressBar
                        android:id="@android:id/empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/spacing_huge"
                        android:paddingBottom="@dimen/spacing_huge"
                        android:visibility="gone"
                        android:indeterminate="true"
                        android:indeterminateTint="?android:colorAccent"
                        android:indeterminateTintMode="src_in" />

                    <ViewStub
                        android:id="@+id/stub_no_search_results"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout="@layout/no_search_results" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/search_results"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:scrollbarStyle="outsideOverlay"
                        android:clipToPadding="false"
                        android:visibility="gone" />
                </FrameLayout>

                <Button
                    android:id="@+id/add_new_boardgame_collect"
                    android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:enabled="false"
                    android:background="@drawable/collect_boardgame"
                    android:padding="@dimen/spacing_micro"
                    android:stateListAnimator="@animator/raise"
                    android:text="@string/add_new_boardgame_collect"
                    android:textAppearance="@style/TextAppearance.Button"
                    android:theme="@style/GameShelfDarkOverlay" />

            </LinearLayout>

        </us.phyxsi.gameshelf.ui.widget.ObservableScrollView>

    </LinearLayout>

</us.phyxsi.gameshelf.ui.widget.BottomSheet>